// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hero /> render matches snapshot 1`] = `
<styled.div
  full={false}
  offsetBy={0}
/>
`;

exports[`<Hero /> render matches snapshot 2`] = `
<styled.div
  full={false}
  offsetBy={0}
>
  <styled.h2>
    A title
  </styled.h2>
</styled.div>
`;

exports[`<Hero /> render matches snapshot 3`] = `
<styled.div
  full={false}
  offsetBy={0}
>
  <styled.div>
    Some content
  </styled.div>
</styled.div>
`;

exports[`<Hero /> render matches snapshot 4`] = `
<styled.div
  full={true}
  offsetBy={0}
/>
`;

exports[`<Hero /> render matches snapshot 5`] = `
<styled.div
  full={false}
  image="http://pure-escapes-webapp-dev.s3-website.eu-west-2.amazonaws.com/assets/cover_photo.png"
  offsetBy={0}
/>
`;

exports[`<Hero /> render matches snapshot 6`] = `
<styled.div
  full={true}
  image="http://pure-escapes-webapp-dev.s3-website.eu-west-2.amazonaws.com/assets/cover_photo.png"
  offsetBy={0}
>
  <styled.h2>
    A title
  </styled.h2>
  <styled.div>
    Some content
  </styled.div>
</styled.div>
`;

exports[`<Hero /> render matches snapshot 7`] = `
<styled.div
  full={true}
  image="http://pure-escapes-webapp-dev.s3-website.eu-west-2.amazonaws.com/assets/cover_photo.png"
  offsetBy={0}
>
  <styled.div>
    <Video
      autoPlay={true}
      fallbackImage="http://pure-escapes-webapp-dev.s3-website.eu-west-2.amazonaws.com/assets/cover_photo.png"
      loop={true}
      muted={true}
      playsInline={true}
      srcs={
        Array [
          Object {
            "path": "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4",
            "type": "mp4",
          },
        ]
      }
    />
  </styled.div>
  <styled.h2>
    A title
  </styled.h2>
  <styled.div>
    Some content
  </styled.div>
</styled.div>
`;
